couple of minor updates - some new icons

--- a/src/plater.ini
+++ b/src/plater.ini
@@ -4,7 +4,7 @@ scale = 2
 lastdirectory = O:\stl files
 preview = False
 centeronarrange = True
-spinstlview = False
+spinstlview = True
 arrangestrategy = column
 arrangemargin = 5
 
