sped split up a bit, but still want to use threads

--- a/src/plater.ini
+++ b/src/plater.ini
@@ -2,9 +2,9 @@
 buildarea = [200, 200]
 scale = 2
 lastdirectory = O:\stl files
-preview = False
+preview = True
 centeronarrange = True
 spinstlview = True
 arrangestrategy = column
-arrangemargin = 5
+arrangemargin = 2
 
