added threading logic for split

--- a/src/plater.ini
+++ b/src/plater.ini
@@ -2,7 +2,7 @@
 buildarea = [200, 200]
 scale = 2
 lastdirectory = O:\stl files
-preview = True
+preview = False
 centeronarrange = True
 spinstlview = True
 arrangestrategy = column
