Added spiral arrange strategy, forced output file to end with .stl

--- a/src/plater.ini
+++ b/src/plater.ini
@@ -5,6 +5,6 @@ lastdirectory = O:\stl files
 preview = False
 centeronarrange = True
 spinstlview = True
-arrangestrategy = column
-arrangemargin = 2
+arrangestrategy = spiral
+arrangemargin = 3
 
